--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -4,28 +4,36 @@
     transform: translateX(-100%); }
   100% {
 		transform: translateX(0%);
-    }
+  }
+}
+
+@keyframes slide-up {
+  0% {
+    transform: translateY($size-xl);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-scale-in {
+  0% {
+    transform: scale(0.8);
   }
 
+  100% {
+    transform: scale(1);
+  }
+}
 
-  @keyframes fade-scale-in {
-    0% {
-      transform: scale(0.8);
-    }
-
-    100% {
-      transform: scale(1);
-    }
+@keyframes fade-slide-in {
+  0% {
+    transform: translateY($size-xl);
+    opacity: 0.5;
   }
 
-  @keyframes fade-slide-in {
-    0% {
-      transform: translateY($size-xl);
-      opacity: 0.5;
-    }
-
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
+}
